--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        
-          <div class="logo">
-            <a href="/" class="logo__link"> megatron</a>
-            <div class="logo__image _ibg">
-              <img src="./images/logo/background.jpg" alt="" />
-            </div>
+        <div class="logo">
+          <a href="/" class="logo__link"> megatron</a>
+          <div class="logo__image _ibg">
+            <img src="./images/logo/background.jpg" alt="" />
           </div>
-          <div class="header__container _container">
+        </div>
+        <div class="header__container _container">
           <nav class="header__nav nav">
             <ul class="nav__items">
               <a href="#" class="nav__link">
@@ -41,13 +40,17 @@
       </header>
       <main class="page">
         <div class="page__container _container">
-          <div class="page__monitoring monitoring"></div>
-          <div class="page__chat chat"></div>
+          <div class="page__monitoring monitoring">Мониторинг</div>
+          <div class="page__chat chat">Чат</div>
         </div>
       </main>
       <footer class="footer">
         <div class="footer__container _container">
-          <div class="footer__icon"></div>
+          <div class="footer__icon">
+              <a href="#"><img src="./images/icons/vk.png" alt=""></a>
+              <a href="#"><img src="./images/icons/icons8-steam-100.png" alt=""></a>
+              <a href="#"><img src="./images/icons/icons8-steam-100.png" alt=""></a>
+          </div>
           <div class="footer__copy-right">Копирайт</div>
         </div>
       </footer>
