add second dropdown

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a href="#" class="nav__link">
                 <li class="nav__item" id="rules">Правила</li>
               </a>
-              <ul class="sub-nav__items">
+              <ul class="sub-nav__items rule">
                 <li>
                   <a href="" class="sub-nav__link">Правила CS:GO серверов</a>
                 </li>
