--- a/index.html
+++ b/index.html
@@ -51,9 +51,16 @@
               </a>
 
               <a href="#" class="nav__link">
-                <li class="nav__item">Статистика</li>
+                <li class="nav__item stat">Статистика</li>
               </a>
-
+              <ul class="sub-nav__items statistic">
+                <li>
+                  <a href="" class="sub-nav__link">Статистика CS:GO серверов</a>
+                </li>
+                <li>
+                  <a href="" class="sub-nav__link">Статистика CS:S серверов</a>
+                </li>
+              </ul>
               <a href="#" class="nav__link">
                 <li class="nav__item" id="auth">Авторизация</li>
               </a>
