add responsive popup

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
       <div class="popup">
         <a href="#" class="popup__area"></a>
         <div class="popup__body">
+          <a id='closePopup' href="">x</a>
           <form action="#" class="popup__form form">
             <label for="name" id="name" class="form__label"></label>
             <input
@@ -137,7 +138,7 @@
               placeholder="Введите Steam ID"
               class="form__input"
             />
-            <button class="form__btn">Зарегистрироваться</button>
+            <button class="form__btn">Войти</button>
           </form>
         </div>
       </div>
