add background on the body

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
   </head>
   <body>
     <div class="wrapper">
-     
       <header class="header">
         <div id="particles-js"></div>
+        <div class="header-logo__container _container">
         <div class="logo">
-          <a href="/" class="logo__link"> megatron</a>
+          <a href="/" class="logo__link">
+          <img class="logo__image" src="./images/logo/Megatron.png" alt="">
+          </a>
         </div>
-        
+      </div>
         <nav class="header__nav nav">
           <div class="header__container _container">
             <ul class="nav__items">
@@ -83,7 +85,7 @@
               ><img src="./images/icons/icons8-steam-100.png" alt=""
             /></a>
           </div>
-          <div class="footer__copy-right">Копирайт</div>
+          <div class="footer__copy-right">MTGAME.SU © 2021</div>
         </div>
       </footer>
 
